Added everyone for the section "Watatsumi Light Cruiser Division"

--- a/html/navy.html
+++ b/html/navy.html
@@ -2500,10 +2500,603 @@
       <!-- 綿津見軽巡洋艦船団（Watatsumi Light Cruiser Division） -->
       <article>
         <h2 id="Watatsumi_Light_Cruiser_Division">綿津見軽巡洋艦船団</h2>
-        <!-- （） -->
+        <!-- 彬沌神通（Jintsuu Akiradon） -->
         <section>
-          <h4 id=""></h4>
-          <p></p>
+          <h4 id="Jintsuu_Akiradon">彬沌神通</h4>
+          <p>
+            彬沌　神通（あきらどん　じんつう）<br>
+            Akiradon Jintsuu
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 彬沌那珂（Naka Akiradon） -->
+        <section>
+          <h4 id="Naka_Akiradon">彬沌那珂</h4>
+          <p>
+            彬沌　那珂（あきらどん　なか）<br>
+            Akiradon Naka
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 彬沌川内（Sendai Akiradon） -->
+        <section>
+          <h4 id="Sendai_Akiradon">彬沌川内</h4>
+          <p>
+            彬沌　川内（あきらどん　せんだい）<br>
+            Akiradon Sendai
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 舟原橿原（Kashihara Funawara） -->
+        <section>
+          <h4 id="Kashihara_Funawara">舟原橿原</h4>
+          <p>
+            舟原　橿原（ふなわら　かしはら）<br>
+            Funawara Kashihara
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 舟原香椎（Kashii Funawara） -->
+        <section>
+          <h4 id="Kashii_Funawara">舟原香椎</h4>
+          <p>
+            舟原　香椎（ふなわら　かしい）<br>
+            Funawara Kashii
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 舟原鹿島（Kashima Funawara） -->
+        <section>
+          <h4 id="Kashima_Funawara">舟原鹿島</h4>
+          <p>
+            舟原　鹿島（ふなわら　かしま）<br>
+            Funawara Kashima
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 舟原香取（Katori Funawara） -->
+        <section>
+          <h4 id="Katori_Funawara">舟原香取</h4>
+          <p>
+            舟原　香取（ふなわら　かとり）<br>
+            Funawara Katori
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- はるみち阿賀野（Agano Harumichi） -->
+        <section>
+          <h4 id="Agano_Harumichi">はるみち阿賀野</h4>
+          <p>
+            はるみち　阿賀野（はるみち　あがの）<br>
+            Harumichi Agano
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- はるみち能代（Noshiro Harumichi） -->
+        <section>
+          <h4 id="Noshiro_Harumichi">はるみち能代</h4>
+          <p>
+            はるみち　能代（はるみち　のしろ）<br>
+            Harumichi Noshiro
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- はるみち酒匂（Sakawa Harumichi） -->
+        <section>
+          <h4 id="">はるみち酒匂</h4>
+          <p>
+            はるみち　酒匂（はるみち　さかわ）<br>
+            Harumichi Sakawa
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- はるみち矢矧（Yahagi Harumichi） -->
+        <section>
+          <h4 id="Yahagi_Harumichi">はるみち矢矧</h4>
+          <p>
+            はるみち　矢矧（はるみち　やはぎ）<br>
+            Harumichi Yahagi
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 錨大淀（Oyodo Ikari） -->
+        <section>
+          <h4 id="Oyodo_Ikari">錨大淀</h4>
+          <p>
+            錨　大淀（いかり　おおよど）<br>
+            Ikari Oyodo
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 狐爺木曾（Kiso Kojii） -->
+        <section>
+          <h4 id="Kiso_Kojii">狐爺木曾</h4>
+          <p>
+            狐爺　木曾（こじい　きそ）<br>
+            Kojii Kiso
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 狐爺北上（Kitakami Kojii） -->
+        <section>
+          <h4 id="Kitakami_Kojii">狐爺北上</h4>
+          <p>
+            狐爺　北上（こじい　きたかみ）<br>
+            Kojii Kitakami
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 狐爺球磨（Kuma Kojii） -->
+        <section>
+          <h4 id="Kuma_Kojii">狐爺球磨</h4>
+          <p>
+            狐爺　球磨（こじい　くま）<br>
+            Kojii Kuma
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 狐爺大井（Oi Kojii） -->
+        <section>
+          <h4 id="Oi_Kojii">狐爺大井</h4>
+          <p>
+            狐爺　大井（こじい　おおい）<br>
+            Kojii Oi
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 狐爺多摩（Tama Kojii） -->
+        <section>
+          <h4 id="Tama_Kojii">狐爺多摩</h4>
+          <p>
+            狐爺　多摩（こじい　たま）<br>
+            Kojii Tama
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 密島龍田（Tatsuta Mitsushima） -->
+        <section>
+          <h4 id="Tatsuta_Mitsushima">密島龍田</h4>
+          <p>
+            密島　龍田（みつしま　たつた）<br>
+            Mitsushima Tatsuta
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 密島天龍（Tenryuu Mitsushima） -->
+        <section>
+          <h4 id="Tenryuu_Mitsushima">密島天龍</h4>
+          <p>
+            密島　天龍（みつしま　てんりゅう）<br>
+            Mitsushima Tenryuu
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 八心夕張（Yuubari Yagokoro） -->
+        <section>
+          <h4 id="Yuubari_Yagokoro">八心夕張</h4>
+          <p>
+            八心　夕張（やごころ　ゆうばり）<br>
+            Yagokoro Yuubari
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- ユウバシハラ阿武隈（Abukuma Yuubashihara） -->
+        <section>
+          <h4 id="Abukuma_Yuubashihara">ユウバシハラ阿武隈</h4>
+          <p>
+            ユウバシハラ　阿武隈（ユウバシハラ　あぶくま）<br>
+            Yuubashihara Abukuma
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- ユウバシハラ五十鈴（Isuzu Yuubashihara） -->
+        <section>
+          <h4 id="Isuzu_Yuubashihara">ユウバシハラ五十鈴</h4>
+          <p>
+            ユウバシハラ　五十鈴（ユウバシハラ　いすず）<br>
+            Yuubashihara Isuzu
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- ユウバシハラ鬼怒（Kinu Yuubashihara） -->
+        <section>
+          <h4 id="Kinu_Yuubashihara">ユウバシハラ鬼怒</h4>
+          <p>
+            ユウバシハラ　鬼怒（ユウバシハラ　きぬ）<br>
+            Yuubashihara Kinu
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- ユウバシハラ長良（Nagara Yuubashihara） -->
+        <section>
+          <h4 id="Nagara_Yuubashihara">ユウバシハラ長良</h4>
+          <p>
+            ユウバシハラ　長良（ユウバシハラ　ながら）<br>
+            Yuubashihara Nagara
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- ユウバシハラ名取（Natori Yuubashihara） -->
+        <section>
+          <h4 id="Natori_Yuubashihara">ユウバシハラ名取</h4>
+          <p>
+            ユウバシハラ　名取（ユウバシハラ　なとり）<br>
+            Yuubashihara Natori
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- ユウバシハラ由良（Yura Yuubashihara） -->
+        <section>
+          <h4 id="Yura_Yuubashihara">ユウバシハラ由良</h4>
+          <p>
+            ユウバシハラ　由良（ユウバシハラ　ゆら）<br>
+            Yuubashihara Yura
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
         </section>
       </article>
       <!-- 綿津見戦闘船団（Watatsumi Battle Division） -->
@@ -2512,7 +3105,9 @@
         <!-- （） -->
         <section>
           <h4 id=""></h4>
-          <p></p>
+          <p>
+            <br>
+          </p>
         </section>
       </article>
       <!-- 株式会社綿津見万能用品（Watatsumi Supply Co.） -->
@@ -2521,7 +3116,9 @@
         <!-- （） -->
         <section>
           <h4 id=""></h4>
-          <p></p>
+          <p>
+            <br>
+          </p>
         </section>
       </article>
       <!-- 宇志江王立旗艦靈龍全員（Crew of the Ushie Royal Flagship Reitatsu） -->
@@ -2530,7 +3127,9 @@
         <!-- （） -->
         <section>
           <h4 id=""></h4>
-          <p></p>
+          <p>
+            <br>
+          </p>
         </section>
       </article>
       <!-- 始まりに戻る（Return to Top） -->
