Added everyone else :)

--- a/html/navy.html
+++ b/html/navy.html
@@ -3102,34 +3102,437 @@
       <!-- 綿津見戦闘船団（Watatsumi Battle Division） -->
       <article>
         <h2 id="Watatsumi_Battle_Division">綿津見戦闘船団</h2>
-        <!-- （） -->
+        <!-- 饗企怪扶桑（Fusou Kyoukiyasu） -->
         <section>
-          <h4 id=""></h4>
+          <h4 id="Fusou_Kyoukiyasu">饗企怪扶桑</h4>
           <p>
-            <br>
+            饗企怪　扶桑（きょうきやす　ふそう）<br>
+            Kyoukiyasu Fusou
           </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 饗企怪山城（Yamashiro Kyoukiyasu） -->
+        <section>
+          <h4 id="Yamashiro_Kyoukiyasu">饗企怪山城</h4>
+          <p>
+            饗企怪　山城（きょうきやす　やましろ）<br>
+            Kyoukiyasu Yamashiro
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 央下日向（Hyuuga Oushita） -->
+        <section>
+          <h4 id="Hyuuga_Oushita">央下日向</h4>
+          <p>
+            央下　日向（おうした　ひゅうが）<br>
+            Oushita Hyuuga
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 央下伊勢（Ise Oushita） -->
+        <section>
+          <h4 id="Ise_Oushita">央下伊勢</h4>
+          <p>
+            央下　伊勢（おうした　いせ）<br>
+            Oushita Ise
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 蒋郷榛名（Haruna Syoukyou） -->
+        <section>
+          <h4 id="Haruna_Syoukyou">蒋郷榛名</h4>
+          <p>
+            蒋郷　榛名（しょうきょう　はるな）<br>
+            Syoukyou Haruna
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 蒋郷比叡（Hiei Syoukyou） -->
+        <section>
+          <h4 id="Hiei_Syoukyou">蒋郷比叡</h4>
+          <p>
+            蒋郷　比叡（しょうきょう　ひえい）<br>
+            Syoukyou Hiei
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 蒋郷霧島（Kirishima Syoukyou） -->
+        <section>
+          <h4 id="Kirishima_Syoukyou">蒋郷霧島</h4>
+          <p>
+            蒋郷　霧島（しょうきょう　きりしま）<br>
+            Syoukyou Kirishima
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 蒋郷金剛（Kongou Syoukyou） -->
+        <section>
+          <h4 id="Kongou_Syoukyou">蒋郷金剛</h4>
+          <p>
+            蒋郷　金剛（しょうきょう　こんごう）<br>
+            Syoukyou Kongou
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 大皇陸奥（Mutsu Tainou） -->
+        <section>
+          <h4 id="Mutsu_Tainou">大皇陸奥</h4>
+          <p>
+            大皇　陸奥（たいのう　むつ）<br>
+            Tainou Mutsu
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 大皇長門（Nagato Tainou） -->
+        <section>
+          <h4 id="Nagato_Tainou">大皇長門</h4>
+          <p>
+            大皇　長門（たいのう　ながと）<br>
+            Tainou Nagato
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 和武蔵（Musashi Wa） -->
+        <section>
+          <h4 id="Musashi_Wa">和武蔵</h4>
+          <p>
+            和　武蔵（わ　むさし）<br>
+            Wa Musashi
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 和大和（Yamato Wa） -->
+        <section>
+          <h4 id="Yamato_Wa">和大和</h4>
+          <p>
+            和　大和（わ　やまと）<br>
+            Wa Yamato
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
         </section>
       </article>
       <!-- 株式会社綿津見万能用品（Watatsumi Supply Co.） -->
       <article>
         <h2 id="Watatsumi_Supply_Company">株式会社綿津見万能用品</h2>
-        <!-- （） -->
+        <!-- 糸傘久須見（Kusumi Itokasa） -->
         <section>
-          <h4 id=""></h4>
+          <h4 id="Kusumi_Itokasa">糸傘久須見</h4>
           <p>
-            <br>
+            糸傘　久須見（いとかさ　くすみ）<br>
+            Itokasa Kusumi
           </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 汝亡殿間宮（Mamiya Nyobouden） -->
+        <section>
+          <h4 id="Mamiya_Nyobouden">汝亡殿間宮</h4>
+          <p>
+            汝亡殿　間宮（にょぼうでん　まみや）<br>
+            Nyobouden Mamiya
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+        </section>
+        <!-- 式松伊良湖（Irako Shikimatsu） -->
+        <section>
+          <h4 id="Irako_Shikimatsu">式松伊良湖</h4>
+          <p>
+            式松　伊良湖（しきまつ　いらこ）<br>
+            Shikimatsu Irako
+          </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
         </section>
       </article>
       <!-- 宇志江王立旗艦靈龍全員（Crew of the Ushie Royal Flagship Reitatsu） -->
       <article>
         <h2 id="Crew_of_the_Ushie_Royal_Flagship_Reitatsu">宇志江王立旗艦靈龍全員</h2>
-        <!-- （） -->
+        <!-- 綿津見菜荷斗（Nagato Watatsumi） -->
         <section>
-          <h4 id=""></h4>
+          <h4 id="Nagato_Watatsumi">綿津見菜荷斗</h4>
+          <p>八百万の海を旅する幽霊</p>
           <p>
-            <br>
+            綿津見　菜荷斗（わたつみ　ながと）<br>
+            Captain Watatsumi Nagato
           </p>
+          <p>
+            種族：舟幽霊<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
+          <p>若い舟幽霊と靈龍の船長である。</p>
+          <p>菜荷斗の舟はひどい戦いの後沈没した。舟を沈没させた敵対者たちにとっては意欲的で、彼女は大小の舟を沈め始めた。祐二は空の軍艦を沈めさせる事で彼女の復讐の念を満喫した。それ以来、菜荷斗は決して他の舟を沈まないように誓ったが、むしろ大陸から別の大陸に人々を運んだ。今で、『<ruby>靈龍<rt>れいたつ</rt></ruby>』の船長である。</p>
+          <p>――数年前、彼女が沈めた最後の舟は、一人の巫女と小さな乗組員しか運ばなかった。幽霊は、接近する舟を見つけた。</p>
+          <p>　「もうひとりの舟。しかし、舟は巫女を運んでいる。この舟を沈めてもっと強力にしようさぁ！」</p>
+          <p>いつものルーチンを通った。舟に乗り込み、巫女に近づいた。</p>
+          <p>　「失礼します。ひしゃくを貸してもらえますか？オレは全員にお茶を提供し、港に置きました」</p>
+          <p>巫女は、陥れられる要求を感知し、要求された幽霊を手に拒否した。</p>
+          <p>　「ワタツミは私たちを沈めると、私たちを溺れたいです」</p>
+          <p>幽霊は逃げられない仕掛けを通して見た巫女によって言葉を失った。</p>
+          <p>　「まだワタツミを沈めたものの為に復讐を運びます。ワタツミを溺れさせたものについて復讐を運びます」</p>
+          <p>仕掛けをしくじるで怒らせた幽霊は、舟のアンカーを掴んだ。</p>
+          <p>　「巫女はオレにひしゃくを渡す事ができ、オレはこの舟を水で満たしています。そうでなければ、オレは巫女のアンカーを使ってボードと釘にそれを粉砕し始めます」</p>
+          <p>巫女は拒否を続け、幽霊が脅威を現実のものにするよう促した。幽霊は舟の乗組員を虐殺し、舟を破壊した。結局、海は流血で染まっていた。しかし、巫女は無傷のままであった。</p>
+          <p>　「どうして死ななかったのか？なぜ単一の負傷を負わなかったのか？」</p>
+          <p>巫女は手を差し伸べた。</p>
+          <p>　「ワタツミが住んでいる痛みと苦しみの世界は残酷なものにすぎません。私はワタツミが待ち望んでいる平和を見つける手助けをする事ができます」</p>
+          <p>海はきらめき、金のように輝き始めました。舟は浮上し、損傷や腐敗の影響を受けていない。</p>
+          <p>　「この舟…この舟は、沈んで死後の世界へと導いた舟のようなものです！しかし、巫女は人間ですよね」</p>
+          <p>巫女は首を横に振って、幽霊を当惑させた。</p>
+          <p>　「その為、昔から宝物でいっぱいのこの舟を船長にする事はできません」</p>
+          <p>幽霊は輝く舟に乗船し、巫女に近づいた。</p>
+          <p>　「でも君ならできる。海や天に拘束されていないこの舟は、私は贈り物として何もワタツミに提示しますね」</p>
+          <p>スピリットアタック全５種</p>
+          <p>
+            ――スピリットカード――<br>
+            転覆「ガックリ破船」<br>
+            錨符「スピリチュアルアンカー」<br>
+            溺符「海で死んだ子供」<br>
+            湊符「インピリアル・フリート」<br>
+            幽霊「三途の川でのお返し」
+          </p>
+          <p>※代名詞は「オレ」である。</p>
+        </section>
+        <!-- 陳江鏈理（Kusari Tân-kang） -->
+        <section>
+          <h4 id="Kusari_Tân-kang">陳江鏈理</h4>
+          <p>
+            陳江　鏈理（タンカン　くさり）<br>
+            Tân-kang Kusari
+          </p>
+          <p>
+            種族：<br>
+            能力：
+          </p>
+          <p>
+            性別：<br>
+            性自認：<br>
+            代名詞：<br>
+            雌雄性：
+          </p>
+          <p>
+            誕生日：<br>
+            年齢：
+          </p>
+          <p>家族：</p>
         </section>
       </article>
       <!-- 始まりに戻る（Return to Top） -->
