Imported monster.css

--- a/html/monster.html
+++ b/html/monster.html
@@ -27,6 +27,7 @@
     <title>造化神録　妖獣の書</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/monster.css">
     <!-- Scripts -->
     <script src="../js/monster.js"></script>
   </head>
