Imported boss.css

--- a/html/boss.html
+++ b/html/boss.html
@@ -27,6 +27,7 @@
     <title>造化神録　ボスの書</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/boss.css">
     <!-- Scripts -->
     <script src="../js/boss.js"></script>
   </head>
