--- a/html/boss.html
+++ b/html/boss.html
@@ -48,210 +48,249 @@
         <h2 id="Chapter_One">第一章　異常</h2>
         <button type="button" onclick="">第一章を隠す</button>
         <button type="button" onclick="">第一章を現す</button>
-        <!-- 崎鳥サーンプリヤ（Sakidori Sampriya） -->
-        <section>
-          <h4 id="Sakidori_Sampriya">崎鳥サーンプリヤ</h4>
-          <button type="button" onclick="">サーンプリヤを隠す</button>
-          <button type="button" onclick="">サーンプリヤを現す</button>
-          <div class="pride">
-            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
-            <br>
-          </div>
-          <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="崎鳥サーンプリヤ">
-            <p class="caption">サーンプリヤ</p>
-          </div>
-          <p>空の嬢</p>
-          <p>
-            崎鳥　サーンプリヤ（さきどり　サーンプリヤ）<br>
-            Sakidori Sampriya
-          </p>
-          <p>
-            種族：ガルーダ<br>
-            能力：強烈な暴風を呼び起こす程度の能力
-          </p>
-          <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
-          </p>
-          <p>
-            誕生日：<br>
-            年齢：
-          </p>
-          <p>家族：</p>
-          <p>スピリットアタック全２種</p>
-          <p>
-            ――スピリットカード――<br>
-            風符「エリアルブラスト」<br>
-            封鶏「真夏日のトルネード」
-          </p>
-          <p>
-            ――ステータス――<br>
-            レベル／Ｌｖ：１０<br>
-            剛健点／ＨＰ：８５１２<br>
-            霊点／ＳＰ：１２３２<br>
-            力／ＡＴＫ：９３<br>
-            守備／ＤＥＦ：８７<br>
-            霊力／ＳＡＴ：１１２<br>
-            霊守／ＳＤＦ：１２７<br>
-            敏速／ＡＧＩ：６６<br>
-            運／ＬＣＫ：３９<br>
-            経験値／ＥＸＰ：１７８<br>
-            亜紅沙／ＡＫＺ：１２８４<br>
-            宝／ＩＴＭ：？
-          </p>
-          <p>
-            ――スキル――<br>
-            たたかい<br>
-            風符「トルネード　-藤田１度-」<br>
-            鳥符「フロック・オブ・デグラデイション」<br>
-            鳥符「フロック・オブ・パワー」<br>
-            鳥符「フロック・オブ・アーマー」<br>
-            風符「エリアルブラスト」
-          </p>
-          <p>
-            ――ラストスペル――<br>
-            封鶏「真夏日のトルネード」
-          </p>
-          <p>
-            ――場所――<br>
-            日木ヶ原の森　深い森
-          </p>
-          <p>※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。デーヴァナーガリー文字に「<span lang="sa" class="font-devanagari">सांप्रिय सकिदोरि</span>」を書く。ＩＡＳＴに「<span lang="sa-Latn" class="font-latin">Sāṃpriya Sakidori</span>」を書く。</p>
-        </section>
-        <!-- テオニムフィ・アポストロプールー（Theonymphi Apostolopoulou） -->
-        <section>
-          <h4 id="Theonymphi_Apostolopoulou">テオニムフィ・アポストロプールー</h4>
-          <button type="button" onclick="">テオニムフィを隠す</button>
-          <button type="button" onclick="">テオニムフィを現す</button>
-          <div class="pride">
-            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
-            <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-              <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-            </a>
-            <br>
-          </div>
-          <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="テオニムフィ・アポストロプールー">
-            <p class="caption">テオニムフィ</p>
-          </div>
-          <p>迷宮の主人</p>
-          <p>
-            テオニムフィ・アポストロプールー<br>
-            Theonymphi Apostolopoulou
-          </p>
-          <p>
-            種族：ミノタウロス<br>
-            能力：人間を自分の死に導く程度の能力
-          </p>
-          <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
-          </p>
-          <p>
-            誕生日：<br>
-            年齢：
-          </p>
-          <p>家族：</p>
-          <p>スピリットアタック全２種</p>
-          <p>
-            ――スピリットカード――<br>
-            牛符「死の迷宮」<br>
-            牛符「半人半牛」
-          </p>
-          <p>
-            ――ステータス――<br>
-            レベル／Ｌｖ：１５<br>
-            剛健点／ＨＰ：３４７４０<br>
-            霊点／ＳＰ：４６４４<br>
-            力／ＡＴＫ：２４５<br>
-            守備／ＤＥＦ：２２４<br>
-            霊力／ＳＡＴ：２４１<br>
-            霊守／ＳＤＦ：２１５<br>
-            敏速／ＡＧＩ：１１６<br>
-            運／ＬＣＫ：６９<br>
-            経験値／ＥＸＰ：４３２<br>
-            亜紅沙／ＡＫＺ：５０６２<br>
-            宝／ＩＴＭ：？
-          </p>
-          <p>
-            ――スキル――<br>
-            たたかい<br>
-            牛符「死の迷宮」<br>
-            牛符「半人半牛」
-          </p>
-          <p>
-            ――場所――<br>
-            神秘的な世界（ミノタウロスの迷宮）
-          </p>
-          <p>※代名詞は「ワシ」である。ギリシャ文字に「<span lang="el" class="font-greek">Θεονυμφή Αποστολοπούλου</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Theonumphḗ Apostolopoúlou</span>」を書く。</p>
-        </section>
+        <div id="ChapterOneIjou">
+          <!-- 崎鳥サーンプリヤ（Sakidori Sampriya） -->
+          <section>
+            <h4 id="Sakidori_Sampriya">崎鳥サーンプリヤ</h4>
+            <button type="button" onclick="">サーンプリヤを隠す</button>
+            <button type="button" onclick="">サーンプリヤを現す</button>
+            <div id="SakidoriSampriya">
+              <div class="pride">
+                <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+                <p class="pronouns">代名詞：</p>
+                <!-- Pride template / Pride flag placeholder :3 -->
+                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                  <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                </a>
+                <br>
+              </div>
+              <div class="art-chara">
+                <img class="art" src="../img/fill.png" alt="崎鳥サーンプリヤ">
+                <p class="caption">サーンプリヤ</p>
+              </div>
+              <p>空の嬢</p>
+              <p>
+                崎鳥　サーンプリヤ（さきどり　サーンプリヤ）<br>
+                Sakidori Sampriya
+              </p>
+              <p>
+                種族：ガルーダ<br>
+                能力：強烈な暴風を呼び起こす程度の能力
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
+              <p>スピリットアタック全２種</p>
+              <p>
+                ――スピリットカード――<br>
+                風符「エリアルブラスト」<br>
+                封鶏「真夏日のトルネード」
+              </p>
+              <p>
+                ――ステータス――<br>
+                レベル／Ｌｖ：１０<br>
+                剛健点／ＨＰ：８５１２<br>
+                霊点／ＳＰ：１２３２<br>
+                力／ＡＴＫ：９３<br>
+                守備／ＤＥＦ：８７<br>
+                霊力／ＳＡＴ：１１２<br>
+                霊守／ＳＤＦ：１２７<br>
+                敏速／ＡＧＩ：６６<br>
+                運／ＬＣＫ：３９<br>
+                経験値／ＥＸＰ：１７８<br>
+                亜紅沙／ＡＫＺ：１２８４<br>
+                宝／ＩＴＭ：？
+              </p>
+              <p>
+                ――スキル――<br>
+                たたかい<br>
+                風符「トルネード　-藤田１度-」<br>
+                鳥符「フロック・オブ・デグラデイション」<br>
+                鳥符「フロック・オブ・パワー」<br>
+                鳥符「フロック・オブ・アーマー」<br>
+                風符「エリアルブラスト」
+              </p>
+              <p>
+                ――ラストスペル――<br>
+                封鶏「真夏日のトルネード」
+              </p>
+              <p>
+                ――場所――<br>
+                日木ヶ原の森　深い森
+              </p>
+              <p>※代名詞は「<ruby>私<rt>わたし</rt></ruby>」である。デーヴァナーガリー文字に「<span lang="sa" class="font-devanagari">सांप्रिय सकिदोरि</span>」を書く。ＩＡＳＴに「<span lang="sa-Latn" class="font-latin">Sāṃpriya Sakidori</span>」を書く。</p>
+            </div>
+          </section>
+          <!-- テオニムフィ・アポストロプールー（Theonymphi Apostolopoulou） -->
+          <section>
+            <h4 id="Theonymphi_Apostolopoulou">テオニムフィ・アポストロプールー</h4>
+            <button type="button" onclick="">テオニムフィを隠す</button>
+            <button type="button" onclick="">テオニムフィを現す</button>
+            <div id="TheonymphiApostolopoulou">
+              <div class="pride">
+                <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+                <p class="pronouns">代名詞：</p>
+                <!-- Pride template / Pride flag placeholder :3 -->
+                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                  <img class="pride-flag" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                </a>
+                <br>
+              </div>
+              <div class="art-chara">
+                <img class="art" src="../img/fill.png" alt="テオニムフィ・アポストロプールー">
+                <p class="caption">テオニムフィ</p>
+              </div>
+              <p>迷宮の主人</p>
+              <p>
+                テオニムフィ・アポストロプールー<br>
+                Theonymphi Apostolopoulou
+              </p>
+              <p>
+                種族：ミノタウロス<br>
+                能力：人間を自分の死に導く程度の能力
+              </p>
+              <p>
+                性別：<br>
+                性自認：<br>
+                代名詞：<br>
+                雌雄性：
+              </p>
+              <p>
+                誕生日：<br>
+                年齢：
+              </p>
+              <p>家族：</p>
+              <p>スピリットアタック全２種</p>
+              <p>
+                ――スピリットカード――<br>
+                牛符「死の迷宮」<br>
+                牛符「半人半牛」
+              </p>
+              <p>
+                ――ステータス――<br>
+                レベル／Ｌｖ：１５<br>
+                剛健点／ＨＰ：３４７４０<br>
+                霊点／ＳＰ：４６４４<br>
+                力／ＡＴＫ：２４５<br>
+                守備／ＤＥＦ：２２４<br>
+                霊力／ＳＡＴ：２４１<br>
+                霊守／ＳＤＦ：２１５<br>
+                敏速／ＡＧＩ：１１６<br>
+                運／ＬＣＫ：６９<br>
+                経験値／ＥＸＰ：４３２<br>
+                亜紅沙／ＡＫＺ：５０６２<br>
+                宝／ＩＴＭ：？
+              </p>
+              <p>
+                ――スキル――<br>
+                たたかい<br>
+                牛符「死の迷宮」<br>
+                牛符「半人半牛」
+              </p>
+              <p>
+                ――場所――<br>
+                神秘的な世界（ミノタウロスの迷宮）
+              </p>
+              <p>※代名詞は「ワシ」である。ギリシャ文字に「<span lang="el" class="font-greek">Θεονυμφή Αποστολοπούλου</span>」を書く。ローマ字に「<span lang="el-Latn" class="font-latin">Theonumphḗ Apostolopoúlou</span>」を書く。</p>
+            </div>
+          </section>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Two">第二章　侵攻</h2>
         <button type="button" onclick="">第二章を隠す</button>
         <button type="button" onclick="">第二章を現す</button>
+        <div id="ChapterTwoShinkou">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Three">第三章　補給</h2>
         <button type="button" onclick="">第三章を隠す</button>
         <button type="button" onclick="">第三章を現す</button>
+        <div id="ChapterThreeHokyuu">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Four">第四章　砂漠</h2>
         <button type="button" onclick="">第四章を隠す</button>
         <button type="button" onclick="">第四章を現す</button>
+        <div id="ChapterFourSabaku">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Five">第五章　山々</h2>
         <button type="button" onclick="">第五章を隠す</button>
         <button type="button" onclick="">第五章を現す</button>
+        <div id="ChapterFiveYamayama">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Six">第六章　過去</h2>
         <button type="button" onclick="">第六章を隠す</button>
         <button type="button" onclick="">第六章を現す</button>
+        <div id="ChapterSixKako">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Seven">第七章　天界</h2>
         <button type="button" onclick="">第七章を隠す</button>
         <button type="button" onclick="">第七章を現す</button>
+        <div id="ChapterSevenTenkai">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Eight">第八章　流竄</h2>
         <button type="button" onclick="">第八章を隠す</button>
         <button type="button" onclick="">第八章を現す</button>
+        <div id="ChapterEightRyuuzan">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Nine">第九章　智慧</h2>
         <button type="button" onclick="">第九章を隠す</button>
         <button type="button" onclick="">第九章を現す</button>
+        <div id="ChapterNineChie">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Chapter_Ten">第十章　解脱</h2>
         <button type="button" onclick="">第十章を隠す</button>
         <button type="button" onclick="">第十章を現す</button>
+        <div id="ChapterTenGedatsu">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="Final_Chapter">最終章　輪廻</h2>
         <button type="button" onclick="">最終章を隠す</button>
         <button type="button" onclick="">最終章を現す</button>
+        <div id="FinalChapterRinne">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <article>
         <h2 id="EX_Chapter">ＥＸ章　再会</h2>
         <button type="button" onclick="">ＥＸ章を隠す</button>
         <button type="button" onclick="">ＥＸ章を現す</button>
+        <div id="ExtraChapterSaikai">
+          <p class="coming-soon">乞うご期待！！</p>
+        </div>
       </article>
       <!-- 始まりに戻る（Return to Top） -->
       <br>
