Added clarifying comments

--- a/html/boss.html
+++ b/html/boss.html
@@ -44,6 +44,7 @@
       <h1 id="Boss_Compendium">ボスの書</h1><hr>
       <button type="button" onclick="hideAll()">全てを隠す</button>
       <button type="button" onclick="revealAll()">全てを現す</button>
+      <!-- 第一章　異常（Chapter 1 “Strangeness”） -->
       <article>
         <h2 id="Chapter_One">第一章　異常</h2>
         <button type="button" onclick="">第一章を隠す</button>
@@ -204,6 +205,7 @@
           </section>
         </div>
       </article>
+      <!-- 第二章　侵攻（Chapter 2 “Invasion”） -->
       <article>
         <h2 id="Chapter_Two">第二章　侵攻</h2>
         <button type="button" onclick="">第二章を隠す</button>
@@ -212,6 +214,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第三章　補給（Chapter 3 “Supply”） -->
       <article>
         <h2 id="Chapter_Three">第三章　補給</h2>
         <button type="button" onclick="">第三章を隠す</button>
@@ -220,6 +223,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第四章　砂漠（Chapter 4 “Desert”） -->
       <article>
         <h2 id="Chapter_Four">第四章　砂漠</h2>
         <button type="button" onclick="">第四章を隠す</button>
@@ -228,6 +232,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第五章　山々（Chapter 5 “Mountains”） -->
       <article>
         <h2 id="Chapter_Five">第五章　山々</h2>
         <button type="button" onclick="">第五章を隠す</button>
@@ -236,6 +241,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第六章　過去（Chapter 6 “Past Ages”） -->
       <article>
         <h2 id="Chapter_Six">第六章　過去</h2>
         <button type="button" onclick="">第六章を隠す</button>
@@ -244,6 +250,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第七章　天界（Chapter 7 “Paradise”） -->
       <article>
         <h2 id="Chapter_Seven">第七章　天界</h2>
         <button type="button" onclick="">第七章を隠す</button>
@@ -252,6 +259,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第八章　流竄（Chapter 8 “Exile”） -->
       <article>
         <h2 id="Chapter_Eight">第八章　流竄</h2>
         <button type="button" onclick="">第八章を隠す</button>
@@ -260,6 +268,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第九章　智慧（Chapter 9 “Wisdom (Prajñā)”） -->
       <article>
         <h2 id="Chapter_Nine">第九章　智慧</h2>
         <button type="button" onclick="">第九章を隠す</button>
@@ -268,6 +277,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 第十章　解脱（Chapter 10 “Liberation (Mokṣa)”） -->
       <article>
         <h2 id="Chapter_Ten">第十章　解脱</h2>
         <button type="button" onclick="">第十章を隠す</button>
@@ -276,6 +286,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- 最終章　輪廻（Final Chapter “Saṃsāra”） -->
       <article>
         <h2 id="Final_Chapter">最終章　輪廻</h2>
         <button type="button" onclick="">最終章を隠す</button>
@@ -284,6 +295,7 @@
           <p class="coming-soon">乞うご期待！！</p>
         </div>
       </article>
+      <!-- ＥＸ章　再会（） -->
       <article>
         <h2 id="EX_Chapter">ＥＸ章　再会</h2>
         <button type="button" onclick="">ＥＸ章を隠す</button>
