--- a/html/boss.html
+++ b/html/boss.html
@@ -47,14 +47,14 @@
       <!-- 第一章　異常（Chapter 1 “Strangeness”） -->
       <article>
         <h2 id="Chapter_One">第一章　異常</h2>
-        <button type="button" onclick="">第一章を隠す</button>
-        <button type="button" onclick="">第一章を現す</button>
+        <button type="button" onclick="hideIjou()">第一章を隠す</button>
+        <button type="button" onclick="revealIjou()">第一章を現す</button>
         <div id="ChapterOneIjou">
           <!-- 崎鳥サーンプリヤ（Sakidori Sampriya） -->
           <section>
             <h4 id="Sakidori_Sampriya">崎鳥サーンプリヤ</h4>
-            <button type="button" onclick="">サーンプリヤを隠す</button>
-            <button type="button" onclick="">サーンプリヤを現す</button>
+            <button type="button" onclick="hideSakidoriSampriya()">サーンプリヤを隠す</button>
+            <button type="button" onclick="revealSakidoriSampriya()">サーンプリヤを現す</button>
             <div id="SakidoriSampriya">
               <div class="pride">
                 <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -133,8 +133,8 @@
           <!-- テオニムフィ・アポストロプールー（Theonymphi Apostolopoulou） -->
           <section>
             <h4 id="Theonymphi_Apostolopoulou">テオニムフィ・アポストロプールー</h4>
-            <button type="button" onclick="">テオニムフィを隠す</button>
-            <button type="button" onclick="">テオニムフィを現す</button>
+            <button type="button" onclick="hideTheonymphiApostolopoulou()">テオニムフィを隠す</button>
+            <button type="button" onclick="revealTheonymphiApostolopoulou()">テオニムフィを現す</button>
             <div id="TheonymphiApostolopoulou">
               <div class="pride">
                 <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
@@ -208,8 +208,8 @@
       <!-- 第二章　侵攻（Chapter 2 “Invasion”） -->
       <article>
         <h2 id="Chapter_Two">第二章　侵攻</h2>
-        <button type="button" onclick="">第二章を隠す</button>
-        <button type="button" onclick="">第二章を現す</button>
+        <button type="button" onclick="hideShinkou()">第二章を隠す</button>
+        <button type="button" onclick="revealShinkou()">第二章を現す</button>
         <div id="ChapterTwoShinkou">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -217,8 +217,8 @@
       <!-- 第三章　補給（Chapter 3 “Supply”） -->
       <article>
         <h2 id="Chapter_Three">第三章　補給</h2>
-        <button type="button" onclick="">第三章を隠す</button>
-        <button type="button" onclick="">第三章を現す</button>
+        <button type="button" onclick="hideHokyuu()">第三章を隠す</button>
+        <button type="button" onclick="revealHokyuu()">第三章を現す</button>
         <div id="ChapterThreeHokyuu">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -226,8 +226,8 @@
       <!-- 第四章　砂漠（Chapter 4 “Desert”） -->
       <article>
         <h2 id="Chapter_Four">第四章　砂漠</h2>
-        <button type="button" onclick="">第四章を隠す</button>
-        <button type="button" onclick="">第四章を現す</button>
+        <button type="button" onclick="hideSabaku()">第四章を隠す</button>
+        <button type="button" onclick="revealSabaku()">第四章を現す</button>
         <div id="ChapterFourSabaku">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -235,8 +235,8 @@
       <!-- 第五章　山々（Chapter 5 “Mountains”） -->
       <article>
         <h2 id="Chapter_Five">第五章　山々</h2>
-        <button type="button" onclick="">第五章を隠す</button>
-        <button type="button" onclick="">第五章を現す</button>
+        <button type="button" onclick="hideYamayama()">第五章を隠す</button>
+        <button type="button" onclick="revealYamayama()">第五章を現す</button>
         <div id="ChapterFiveYamayama">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -244,8 +244,8 @@
       <!-- 第六章　過去（Chapter 6 “Past Ages”） -->
       <article>
         <h2 id="Chapter_Six">第六章　過去</h2>
-        <button type="button" onclick="">第六章を隠す</button>
-        <button type="button" onclick="">第六章を現す</button>
+        <button type="button" onclick="hideKako()">第六章を隠す</button>
+        <button type="button" onclick="revealKako()">第六章を現す</button>
         <div id="ChapterSixKako">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -253,8 +253,8 @@
       <!-- 第七章　天界（Chapter 7 “Paradise”） -->
       <article>
         <h2 id="Chapter_Seven">第七章　天界</h2>
-        <button type="button" onclick="">第七章を隠す</button>
-        <button type="button" onclick="">第七章を現す</button>
+        <button type="button" onclick="hideTenkai()">第七章を隠す</button>
+        <button type="button" onclick="revealTenkai()">第七章を現す</button>
         <div id="ChapterSevenTenkai">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -262,8 +262,8 @@
       <!-- 第八章　流竄（Chapter 8 “Exile”） -->
       <article>
         <h2 id="Chapter_Eight">第八章　流竄</h2>
-        <button type="button" onclick="">第八章を隠す</button>
-        <button type="button" onclick="">第八章を現す</button>
+        <button type="button" onclick="hideRyuuzan()">第八章を隠す</button>
+        <button type="button" onclick="revealRyuuzan()">第八章を現す</button>
         <div id="ChapterEightRyuuzan">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -271,8 +271,8 @@
       <!-- 第九章　智慧（Chapter 9 “Wisdom (Prajñā)”） -->
       <article>
         <h2 id="Chapter_Nine">第九章　智慧</h2>
-        <button type="button" onclick="">第九章を隠す</button>
-        <button type="button" onclick="">第九章を現す</button>
+        <button type="button" onclick="hideChie()">第九章を隠す</button>
+        <button type="button" onclick="revealChie()">第九章を現す</button>
         <div id="ChapterNineChie">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -280,8 +280,8 @@
       <!-- 第十章　解脱（Chapter 10 “Liberation (Mokṣa)”） -->
       <article>
         <h2 id="Chapter_Ten">第十章　解脱</h2>
-        <button type="button" onclick="">第十章を隠す</button>
-        <button type="button" onclick="">第十章を現す</button>
+        <button type="button" onclick="hideGedatsu()">第十章を隠す</button>
+        <button type="button" onclick="revealGedatsu()">第十章を現す</button>
         <div id="ChapterTenGedatsu">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -289,8 +289,8 @@
       <!-- 最終章　輪廻（Final Chapter “Saṃsāra”） -->
       <article>
         <h2 id="Final_Chapter">最終章　輪廻</h2>
-        <button type="button" onclick="">最終章を隠す</button>
-        <button type="button" onclick="">最終章を現す</button>
+        <button type="button" onclick="hideRinne()">最終章を隠す</button>
+        <button type="button" onclick="revealRinne()">最終章を現す</button>
         <div id="FinalChapterRinne">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
@@ -298,8 +298,8 @@
       <!-- ＥＸ章　再会（） -->
       <article>
         <h2 id="EX_Chapter">ＥＸ章　再会</h2>
-        <button type="button" onclick="">ＥＸ章を隠す</button>
-        <button type="button" onclick="">ＥＸ章を現す</button>
+        <button type="button" onclick="hideSaikai()">ＥＸ章を隠す</button>
+        <button type="button" onclick="revealSaikai()">ＥＸ章を現す</button>
         <div id="ExtraChapterSaikai">
           <p class="coming-soon">乞うご期待！！</p>
         </div>
