Fixed the header

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -32,9 +32,11 @@
   </head>
   <body>
     <header id="top">
-      <h1 class="header-text">天園神關里　～ Brilliance of Heaven Pleasure<br>
-      造化神録<br>
-      宇志江王国</h1>
+      <h1 class="header-text">
+        天園神關里　～ Brilliance of Heaven Pleasure<br>
+        造化神録<br>
+        宇志江王国
+      </h1>
     </header>
     <main>
       <!-- 宇志江王国（Kingdom of Ushie） -->
