Imported ushie.css

--- a/html/ushie.html
+++ b/html/ushie.html
@@ -27,6 +27,7 @@
     <title>造化神録　宇志江王国</title>
     <!-- The CSS stylesheet. -->
     <link rel="stylesheet" href="../css/default.css">
+    <link rel="stylesheet" href="../css/ushie.css">
     <!-- Scripts -->
     <script src="../js/ushie.js"></script>
   </head>
