--- a/html/gallery/spalmea/Botokhui_Targhun.html
+++ b/html/gallery/spalmea/Botokhui_Targhun.html
@@ -47,7 +47,7 @@
         <h2 class="art-heading">レファレンス</h2><hr>
         <div class="flex-gallery" id="Flexbox 【レファレンス】">
           <div class="art-ref" id="ボトフイタルグンのレファレンス">
-            <img class="reference-art" src="../../../img/ref/OliviaAxelsson.png" alt="ボトフイタルグンのレファレンス">
+            <img class="reference-art" src="../../../img/ref/BotokhuiTarghun.png" alt="ボトフイタルグンのレファレンス">
           </div>
         </div>
       </section>
