Added art gallery for Bughu Khatagi

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1309,6 +1309,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Бугу Хатаги</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠪᠤᠭᠤ<br>ᠬᠠᠲᠠᠭᠢ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Bughu_Khatagi.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- ジグール（Jiguur） -->
         <section>
