--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1353,6 +1353,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Жигуур</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠵᠢᠭᠤᠭᠤᠷ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Jiguur.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- ハラグルグ（Kharagulug） -->
         <section>
