--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1397,6 +1397,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Харагулуг</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠬᠠᠷᠠᠭᠤᠯᠤᠭ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Kharagulug.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- ホンゴルヅォル（Khongordzol） -->
         <section>
