Added art gallery for Khongordzol

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1441,6 +1441,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Хонгордзол</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠬᠣᠩᠭᠣᠷᠵᠣᠯ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Khongordzol.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- モンゴルジン（Mongoljin） -->
         <section>
