Added art gallery for Mongoljin

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1485,6 +1485,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Монголжин</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠮᠣᠩᠭᠣᠯᠵᠢᠨ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Mongoljin.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- オキンバルハグ（Okin Barkhagh） -->
         <section>
