Added art gallery for Okin Barkhagh

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1529,6 +1529,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Окин Бархаг</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠣᠬᠢᠨ<br>ᠪᠠᠷᠬᠠᠭ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Okin_Barkhagh.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- サランツァツル（Sarantsatsr） -->
         <section>
