Added art gallery for Sarantsatsr

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1575,6 +1575,8 @@
           <p>エルス・シュールガ村の村長であり、スポールメェアの砂漠に住む女神である。</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Саранцацр</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠰᠠᠷᠠᠨᠴᠠᠴᠤᠷ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Sarantsatsr.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- セチェン（Sechen） -->
         <section>
