Added art gallery for Sechen

--- a/html/spalmea.html
+++ b/html/spalmea.html
@@ -1619,6 +1619,8 @@
           <p>家族：</p>
           <p>※キリル文字に「<span lang="mn" class="font-cyrillic">Сэчэн</span>」を書く。モンゴル文字「<span lang="mn-Mong" class="font-mongolian text-mongolian">ᠰᠡᠴᠡᠨ</span>」を書く。</p>
           <br>
+          <a href="./gallery/spalmea/Sechen.html" target="topframe">美術館へ行きますか？</a>
+          <br>
         </section>
         <!-- テムゲオトチギン（Temuge Otchigin） -->
         <section>
